Fix /tmp to /var/tmp
As we use /tmp for RAMFS, do not share it with scripts
and RO mounted things, or chown fails.

Signed-off-by: Bogdan Dobrelya <bogdando@mail.ru>

--- a/playbooks/oooq-libvirt-under-openshift.yaml
+++ b/playbooks/oooq-libvirt-under-openshift.yaml
@@ -38,7 +38,7 @@
   tasks:
     - name: Upload custom tht env files
       copy:
-        src: /tmp/scripts/tht
+        src: /var/tmp/scripts/tht
         dest: "{{working_dir}}"
         force: yes
         owner: "{{undercloud_user}}"
