--- a/playbooks/oooq-libvirt-under.yaml
+++ b/playbooks/oooq-libvirt-under.yaml
@@ -37,7 +37,7 @@
     undercloud_user: stack
   tasks:
     - copy:
-        src: /tmp/scripts/tht
+        src: /var/tmp/scripts/tht
         dest: "{{working_dir}}"
         force: yes
         owner: "{{undercloud_user}}"
