Only pick the ansible paths under dev/test
Ignore anything but callback_plugins installed in VENV, as we rsync
things into LWD on entry point. This fixes collisions of the
bind-mounted OOOQ(E) under dev/test vs installed/clonned into the venv.
Fix the ansible.cfg not being picked up by the oooq work path

Signed-off-by: Bogdan Dobrelya <bogdando@mail.ru>

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -13,10 +13,10 @@ inventory = /etc/ansible
 inventory_ignore_extensions = LICENSE, tox.ini, ansible-role-requirements.yml, .d, .egg-info, .py, .pyc, .cfg, .crt, .md, .rst, .txt, .log, .sh, playbooks, roles, config, test_plugins, releasenotes, library, doc, lib, ci-scripts
 
 # Attempt to load custom modules whether it's installed system-wide or from a virtual environment
-callback_plugins = /usr/lib/python2.7/site-packages/ara/plugins/callbacks:$VIRTUAL_ENV/lib/python2.7/site-packages/ara/plugins/callbacks:/usr/local/lib/python2.7/dist-packages/ara/plugins/callbacks
-test_plugins = /usr/lib/python2.7/site-packages/tripleo-quickstart/test_plugins:$VIRTUAL_ENV/usr/local/share/tripleo-quickstart/test_plugins:test_plugins
-library = /usr/lib/python2.7/site-packages/tripleo-quickstart/library:$VIRTUAL_ENV/usr/local/share/tripleo-quickstart/library:library
-roles_path = roles:$VIRTUAL_ENV/usr/local/share/tripleo-quickstart/roles:$VIRTUAL_ENV/usr/local/share/ansible/roles
+callback_plugins = $VIRTUAL_ENV/lib/python2.7/site-packages/ara/plugins/callbacks
+test_plugins =$LWD/test_plugins
+library = $LWD/library
+roles_path = $LWD/roles
 
 [ssh_connection]
 pipelining = False
