--- a/vars/quickstart.yaml
+++ b/vars/quickstart.yaml
@@ -3,7 +3,7 @@
 # NOTE: Requires -E config/environments/dev_privileged_libvirt.yml
 # E.g.:
 # quickstart.sh -R master -e dlrn_hash_tag=current-tripleo --no-clone \
-#   -N config/nodes/1ctlr_1comp.yml -t all \
+#   -t all \
 #   -E config/environments/dev_privileged_libvirt.yml \
 #   -E /var/tmp/scripts/vars/quickstart.yaml \
 #   localhost
@@ -37,18 +37,25 @@ libvirt_volume_pool: default
 libvirt_domain_type: kvm
 
 # https://bugs.launchpad.net/tripleo/+bug/1788875
-# path B: map to fit to that UC post install creates
-# and disable generation of oooq_* flavors
-flavor_map:
-  control: control
-  compute: compute
-  ceph: ceph-storage
-  block: block-storage
-  blockstorage: block-storage
-  swift: swift-storage
-  swiftstorage: swift-storage
-  baremetal: baremetal
-step_overcloud_prep_flavors: false
-default_disk: 41
-default_vcpu: 1
+# path A: update node configs to fit into flavors
+step_overcloud_prep_flavors: true
+default_disk: 19
+default_vcpu: 2
 default_memory: 4096
+
+# Define a single controller node and a single compute node.
+overcloud_nodes:
+  - name: control_0
+    flavor: oooq_control
+    virtualbmc_port: 6230
+    default_name: overcloud-controller-0
+    hostnamemap_override: overcloud-controller-foo-0
+
+  - name: compute_0
+    flavor: oooq_compute
+    virtualbmc_port: 6231
+    default_name: overcloud-novacompute-0
+    hostnamemap_override: overcloud-novacompute-bar-0
+
+node_count: 2
+
