--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,26 +1,26 @@
 [defaults]
-force_color = 0
-command_warnings = False
 retry_files_enabled = False
-stdout_callback = skippy
-callback_whitelist = profile_tasks
+callbacks_enabled = profile_tasks
 host_key_checking = False
 gathering = smart
 fact_caching = jsonfile
 fact_caching_connection = /tmp/ansible_facts_cache
 fact_caching_timeout = 0
-inventory = /etc/ansible
-inventory_ignore_extensions = LICENSE, tox.ini, ansible-role-requirements.yml, .d, .egg-info, .py, .pyc, .cfg, .crt, .md, .rst, .txt, .log, .sh, playbooks, roles, config, test_plugins, releasenotes, library, doc, lib, ci-scripts
+# https://docs.ansible.com/ansible/latest/reference_appendices/interpreter_discovery.html
+# this may fix a few things in the future
+interpreter_python = auto
 
 # Attempt to load custom modules whether it's installed system-wide or from a virtual environment
-callback_plugins = $VIRTUAL_ENV/lib/python2.7/site-packages/ara/plugins/callbacks
-test_plugins =$LWD/test_plugins
-library = $LWD/library
-roles_path = $LWD/roles
+callback_plugins = /usr/lib/python2.7/site-packages/ara/plugins/callbacks:$VIRTUAL_ENV/lib/python2.7/site-packages/ara/plugins/callbacks:$VIRTUAL_ENV/lib/python3.6/site-packages/ara/plugins/callbacks:/usr/local/lib/python2.7/dist-packages/ara/plugins/callbacks
+test_plugins = /usr/lib/python2.7/site-packages/tripleo-quickstart/test_plugins:$VIRTUAL_ENV/usr/local/share/tripleo-quickstart/test_plugins:test_plugins:$LWD/test_plugins
+library = /usr/lib/python2.7/site-packages/tripleo-quickstart/library:$VIRTUAL_ENV/usr/local/share/tripleo-quickstart/library:library:$VIRTUAL_ENV/share/ansible/plugins/modules:$LWD/library
+module_utils = $VIRTUAL_ENV/share/ansible/plugins/module_utils:/usr/share/ansible/plugins/module_utils
+roles_path = roles:$VIRTUAL_ENV/usr/local/share/tripleo-quickstart/roles:$VIRTUAL_ENV/usr/local/share/ansible/roles:$VIRTUAL_ENV/usr/local/share/opstools-ansible/roles:$VIRTUAL_ENV/share/ansible/roles:$VIRTUAL_ENV/usr/share/ansible/roles:/usr/share/ansible/roles:$LWD/roles
+collections_paths = collections:$VIRTUAL_ENV/share/ansible/collections:/usr/share/ansible/collections:$HOME/.ansible/collections/
+action_plugins = /usr/share/ansible/plugins/action:$VIRTUAL_ENV/share/ansible/plugins/action:$VIRTUAL_ENV/lib/python2.7/site-packages/ara/plugins/actions:$VIRTUAL_ENV/lib/python3.6/site-packages/ara/plugins/actions
 
 [ssh_connection]
-pipelining = False
+pipelining = True
 control_path = %(directory)s/%%h-%%r
 ssh_args = -o ControlMaster=auto -o ControlPersist=270s -o ServerAliveInterval=30 -o GSSAPIAuthentication=no
 retries = 3
-
